--- a/desafios/d012 by GG/estilos/style.css
+++ b/desafios/d012 by GG/estilos/style.css
@@ -64,6 +64,7 @@ section.imagem{
     background-size: cover;
     box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
     text-shadow: 1px 1px 0px black;
+    background-attachment: fixed;
 }
 
 section.imagem#img01{
